Техномарт. Разметка главной страницы и каталога

--- a/index.html
+++ b/index.html
@@ -2,11 +2,225 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>HTML Academy: Техномарт</title>
+    <title>Техномарт</title>
   </head>
   <body>
+    <header>
+      <nav>
+        <img src="https://via.placeholder.com/150x100" alt="Логотип магазина Техномарт">
+        <input type="search" name="search" value="Поиск">
+        <ul>
+          <li><a href="blank.html">Закладки</a></li>
+          <li><a href="blank.html">Корзина</a></li>
+        </ul>
+        <input type="submit" value="Оформить заказ">
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
+        <p>Интернет-магазин строительных материалов и инструментов для ремонта</p>
+        <tel>+7 (812) 555-05-55</tel>
+        <p>г. Санкт-Петербург, ул. Б. Конюшенная, д.19/8</p>
+        <section class="registr">
+          <button><a href="blank.html">Войти</a></button>
+          <button><a href="blank.html">Регистрация</a></button>
+        </section>
+        <ul>
+          <li><a href="index.html">Главная</a></li>
+          <li><a href="blank.html">Компания</a></li>
+          <li><a href="catalog.html">Каталог</a></li>
+          <li><a href="blank.html">Новости</a></li>
+          <li><a href="blank.html">Спецпредложения</a></li>
+          <li><a href="blank.html">Контакты</a></li>
+          <li><a href="blank.html">Доставка</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <h1>Магазин Техномарт</h1>
+      <section class="categories">
+        <h2>Категории товаров</h2>
+        <ul>
+          <li>
+            <h3>Материалы</h3>
+            <button><a href="blank.html">НА ЛЮБОЙ ВКУС</a></button>
+          </li>
+          <li>
+            <h3>Инструменты</h3>
+            <button><a href="blank.html">НА ВСЕ СЛУЧАИ</a></button>
+          </li>
+          <li>
+            <h3>Техника</h3>
+            <button><a href="blank.html">ДЛЯ СТРОЙКИ</a></button>
+          </li>
+          <li>
+            <article  class="slider">
+              <h2>ПЕРФОРАТОРЫ</h2>
+              <p>Настоящие мужские игрушки</p>
+              <figure>
+                <a href="#">
+                  <img src="img/studio.jpg" width="286" height="164" alt="Интерьер">
+                </a>
+              </figure>
+              <button type="button">Назад</button>
+              <button type="button">Вперед</button>
+              <button> <a href="catalog.html">ОТКРЫТЬ КАТАЛОГ</a></button>
+            </article>
+          </li>
+          <li>
+            <h3>Скидки 50%</h3>
+            <button><a href="blank.html">НА 350 ТОВАРОВ</a></button>
+          </li>
+          <li>
+            <h3>Доставка</h3>
+            <button><a href="#delivery">БЕСПЛАТНО</a></button>
+          </li>
 
+
+        </ul>
+      </section>
+      <section class="popgoods">
+        <h2>Популярные товары:</h2>
+        <button><a href="blank.html">Все популярные товары</a></button>
+        <article class="good">
+          <img src="https://via.placeholder.com/150x100" alt="BOSCH BFG 9000">
+          <h4 class="perf">ПЕРФОРАТОР BOSCH BFG 9000</h4>
+          <div class="old-price">32500 Р.</div>
+          <div class="new-price">25500 Р.</div>
+        </article>
+        <article class="good">
+          <img src="https://via.placeholder.com/150x100" alt="BOSCH BFG 3000">
+          <h4 class="perf">ПЕРФОРАТОР BOSCH BFG 3000</h4>
+          <div class="old-price">22500 Р.</div>
+          <div class="new-price">15500 Р.</div>
+        </article>
+        <article class="good">
+          <img src="https://via.placeholder.com/150x100" alt="BOSCH BFG 6000">
+          <h4 class="perf">ПЕРФОРАТОР BOSCH BFG 6000</h4>
+          <div class="old-price">30500 Р.</div>
+          <div class="new-price">25500 Р.</div>
+        </article>
+        <article class="good">
+          <img src="https://via.placeholder.com/150x100" alt="BOSCH BFG 2000">
+          <h4 class="perf">ПЕРФОРАТОР BOSCH BFG 2000</h4>
+          <div class="old-price"></div>
+          <div class="new-price">12500 Р.</div>
+        </article>
+      </section>
+      <section class="popmakers">
+        <h2>Популярные производители:</h2>
+        <button><a href="blank.html">Все производители</a></button>
+        <ul>
+          <li>
+            <article><img src="https://via.placeholder.com/150x100" alt="Bosch"></article>
+          </li>
+          <li>
+            <article><img src="https://via.placeholder.com/150x100" alt="Makita"></article>
+          </li>
+          <li>
+            <article><img src="https://via.placeholder.com/150x100" alt="DeWalt"></article>
+          </li>
+          <li>
+            <article><img src="https://via.placeholder.com/150x100" alt="Интерскол"></article>
+          </li>
+          <li>
+            <article><img src="https://via.placeholder.com/150x100" alt="Hitachi"></article>
+          </li>
+          <li>
+            <article><img src="https://via.placeholder.com/150x100" alt="LG"></article>
+          </li>
+          <li>
+            <article><img src="https://via.placeholder.com/150x100" alt="AEG"></article>
+          </li>
+          <li>
+            <article><img src="https://via.placeholder.com/150x100" alt="Metabo"></article>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2>Сервис</h2>
+        <p>Хороший интернет-магазин отличается от плохого не только ценами!</p>
+        <p>Мы стараемся изо всех сил, чтоб сделать ваши покупки приятными.</p>
+        <select name="service" size="3">
+          <option value="delivery">Доставка</option>
+          <option value="garant">Гарантия</option>
+          <option value="credit">Кредит</option>
+        </select>
+        <div class="selected">
+          <h2>Доставка</h2>
+          <p>Мы с удовольствием доставим ваш товар прямо<br>
+            к вашему подъезду совершенно бесплатно!<br>
+            Ведь мы неплохо заработаем,<br>
+            поднимая его на ваш этаж!</p>
+        </div>
+        <div class="selected-img">
+          <img src="https://via.placeholder.com/150x100" alt="Delivery-img">
+        </div>
+      </section>
+      <section class="company">
+        <h2>Компания "Техномарт"</h2>
+        <p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для<br>
+          ремонта и строительства не оставит равнодушными любителей сэкономить на<br>
+          гастарбайтерах</p>
+        <p>Мы можем доставить ваш товар в самые отдаленные точки России!<br>
+        Техномарт работает со многими транспортными компаниями:</p>
+        <ul>
+          <li>Деловые линии</li>
+          <li>Автотрейдинг</li>
+          <li>ЖелДорЭкспедиция</li>
+        </ul>
+        <button><a href="blank.html">Подробнее о компании</a></button>
+      </section>
+      <section class="contacts">
+        <h2>Контакты</h2>
+        <p>Вы можете забрать товар сами, заехав к нам в офис:</p>
+        <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3A6cbd792ea323d563b05316d95f2014a08521021fccd97c6698da49613dcb9348&amp;source=constructor" width="320" height="240" frameborder="0"></iframe>
+        <button><a href="blank.html">ЗАБЛУДИЛИСЬ? НАПИШИТЕ НАМ!</a></button>
+      </section>
+    </main>
+    <footer>
+      <img src="https://via.placeholder.com/150x100" alt="Логотип магазина Техномарт">
+      <section>
+        <ul>
+          <li><a href="#company">Компания</a></li>
+          <li><a href="blank.html">Новости</a></li>
+          <li><a href="catalog.html">Каталог</a></li>
+          <li><a href="blank.html">Доставка</a></li>
+          <li><a href="#contacts">Контакты</a></li>
+          <li><a href="blank.html">Материалы</a></li>
+          <li><a href="blank.html">Техника</a></li>
+          <li><a href="blank.html">Инструмент</a></li>
+          <li><a href="blank.html">Спецпредложения</a></li>
+        </ul>
+    </section>
+    <section>
+        <p>г. Санкт-Петербург, ул. Б. Конюшенная, д.19/8<br>
+        +7 (812) 555-05-55</p>
+    </section>
+    <section>
+      <div class="copyright">
+        &copy;2010-2019 Компания "Техномарт"<br>
+        Все права защищены
+      </div>
+      <div class="sw">
+        <ul>
+          <li>
+            <a href="#">Вконтакте</a>
+          </li>
+          <li>
+            <a href="#">Фейсбук</a>
+          </li>
+          <li>
+            <a href="#">Инстаграм</a>
+          </li>
+        </ul>
+      </div>
+      <div class="email">
+        <h4>Обратная связь:</h4>
+        <p>mail@htmlacademy.ru</p>
+      </div>
+      <div class="produced">
+        <h4>Разработано - </h4>
+        <p><a href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a></p>
+      </div>
+    </section>
+    </footer>
   </body>
 </html>
