--- a/catalog.html
+++ b/catalog.html
@@ -183,12 +183,12 @@
           <li><a href="blank.html">Инструмент</a></li>
           <li><a href="blank.html">Спецпредложения</a></li>
         </ul>
-    </section>
+    </section class="place">
     <section>
         <p>г. Санкт-Петербург, ул. Б. Конюшенная, д.19/8<br>
         +7 (812) 555-05-55</p>
     </section>
-    <section>
+    <section class="rights">
       <div class="copyright">
         &copy;2010-2019 Компания "Техномарт"<br>
         Все права защищены
