--- a/catalog.html
+++ b/catalog.html
@@ -193,7 +193,7 @@
         &copy;2010-2019 Компания "Техномарт"<br>
         Все права защищены
       </div>
-      <div class="socw">
+      <div class="sw">
         <ul>
           <li>
             <a href="#">Вконтакте</a>
