задание 4. Добавляем картинки

--- a/catalog.html
+++ b/catalog.html
@@ -2,30 +2,32 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>HTML Academy: Техномарт</title>
+    <title>HTML Academy: Каталог - Техномарт</title>
   </head>
   <body>
     <header>
       <nav>
         <section class="top-nav">
-          <a href="index.html"><img src="https://via.placeholder.com/150x100" alt="Логотип магазина Техномарт"></a>
+          <a href="index.html"><img src="img/svg/logo-technomart.svg" width="220" height="47" alt="Логотип магазина Техномарт"></a>
+          <img src="img/svg/icon-search.svg" width="17" height="17" alt="значок поиска">
           <input type="search" name="search" value="Поиск">
           <ul>
-            <li><a href="favor.html">Закладки</a></li>
-            <li><a href="basket.html">Корзина</a></li>
+            <li><a href="favor.html"><img src="img/svg/icon-bookmark.svg" width="14" height="16" alt="значок закладки">Закладки</a></li>
+            <li><a href="basket.html"><img src="img/svg/icon-cart.svg" width="15" height="15" alt="значок корзины">Корзина</a></li>
           </ul>
           <input type="submit" value="Оформить заказ">
         </section>
         <section class="address">
           <p>Интернет-магазин строительных материалов и инструментов для ремонта</p>
-        <tel>+7 (812) 555-05-55</tel>
-        <p>г. Санкт-Петербург, ул. Б. Конюшенная, д.19/8</p>
+          <img src="img/svg/icon-phone.svg" width="19" height="19" alt="значок телефона">
+          <tel>+7 (812) 555-05-55</tel>
+          <p>г. Санкт-Петербург, ул. Б. Конюшенная, д.19/8</p>
         </section>
         <section>
           <div class="autorized">
-            <a href="#"><img scr="#" alt="profile-icon"></a>
+            <a href="#"><img scr="img/svg/icon-user.svg" width="20" height="18" alt="icon-user"></a>
             <a href="#">Равшан Джумшутович</a>
-            <a href="index.html"><img src="#" alt="exit-icon"></a>
+            <a href="index.html"><img src="img/svg/icon-logout.svg" width="20" height="17" alt="exit-icon"></a>
           </div>
           <ul>
             <li><a href="blank.html">Мои заказы</a></li>
@@ -65,16 +67,11 @@
           </fieldset>
           <fieldset class="makers">
             <legend>Производители:</legend>
-              <input type="checkbox" id="bosch">
-              <label for="bosch">BOSCH</label>
-              <input type="checkbox" id="interskol">
-              <label for="interskol">ИНТЕРСКОЛ</label>
-              <input type="checkbox" id="makita">
-              <label for="interskol">MAKITA</label>
-              <input type="checkbox" id="dewalt">
-              <label for="dewalt">DeWalt</label>
-              <input type="checkbox" id="hitachi">
-              <label for="hitachi">HITACHI</label>
+              <label><input type="checkbox" id="bosch">BOSCH</label>
+              <label><input type="checkbox" id="interskol">ИНТЕРСКОЛ</label>
+              <label><input type="checkbox" id="makita">MAKITA</label>
+              <label><input type="checkbox" id="dewalt">DeWalt</label>
+              <label><input type="checkbox" id="hitachi">HITACHI</label>
           </fieldset>
           <fieldset class="power">
             <legend>ПИТАНИЕ:</legend>
@@ -96,59 +93,59 @@
           <li><a href="#">по цене</a></li>
           <li><a href="#">по типу</a></li>
           <li><a href="#">по функционалу</a></li>
-          <li><a href="#"><img scr="" alt="по возрастанию"></a></li>
-          <li><a href="#"><img scr="" alt="по убыванию"></a></li>
+          <li><a href="#"><img scr="img/svg/icon-up-dir.svg" alt=""></a></li>
+          <li><a href="#"><img scr="img/svg/icon-down-dir.svg" alt=""></a></li>
         </ul>
       </section>
       <article class="good">
-        <img src="https://via.placeholder.com/150x100" alt="BOSCH BFG 3000">
+        <img src="img/goods/perf2-3000.jpg" width="144" height="128" alt="BOSCH BFG 3000">
         <h4 class="perf">ПЕРФОРАТОР BOSCH BFG 3000</h4>
         <div class="old-price">22500 Р.</div>
         <div class="new-price">15500 Р.</div>
       </article>
       <article class="good">
-        <img src="https://via.placeholder.com/150x100" alt="BOSCH BFG 6000">
+        <img src="img/goods/perf6000.jpg" width="144" height="128" alt="BOSCH BFG 6000">
         <h4 class="perf">ПЕРФОРАТОР BOSCH BFG 6000</h4>
         <div class="old-price">30500 Р.</div>
         <div class="new-price">25500 Р.</div>
       </article>
       <article class="good">
-        <img src="https://via.placeholder.com/150x100" alt="BOSCH BFG 2000">
+        <img src="img/goods/perf2-3000.jpg" width="144" height="128" alt="BOSCH BFG 2000">
         <h4 class="perf">ПЕРФОРАТОР BOSCH BFG 2000</h4>
         <div class="old-price"></div>
         <div class="new-price">12500 Р.</div>
       </article>
       <article class="good">
-        <img src="https://via.placeholder.com/150x100" alt="BOSCH BFG 3000">
+        <img src="img/goods/perf2-3000.jpg" width="144" height="128" alt="BOSCH BFG 3000">
         <h4 class="perf">ПЕРФОРАТОР BOSCH BFG 3000</h4>
         <div class="old-price">22500 Р.</div>
         <div class="new-price">15500 Р.</div>
       </article>
       <article class="good">
-        <img src="https://via.placeholder.com/150x100" alt="BOSCH BFG 6000">
+        <img src="img/goods/perf6000.jpg" width="144" height="128" alt="BOSCH BFG 6000">
         <h4 class="perf">ПЕРФОРАТОР BOSCH BFG 6000</h4>
         <div class="old-price">30500 Р.</div>
         <div class="new-price">25500 Р.</div>
       </article>
       <article class="good">
-        <img src="https://via.placeholder.com/150x100" alt="BOSCH BFG 2000">
+        <img src="img/goods/perf2-3000.jpg" width="144" height="128" alt="BOSCH BFG 2000">
         <h4 class="perf">ПЕРФОРАТОР BOSCH BFG 2000</h4>
         <div class="old-price"></div>
         <div class="new-price">12500 Р.</div>
       </article><article class="good">
-        <img src="https://via.placeholder.com/150x100" alt="BOSCH BFG 3000">
+        <img src="img/goods/perf2-3000.jpg" width="144" height="128" alt="BOSCH BFG 3000">
         <h4 class="perf">ПЕРФОРАТОР BOSCH BFG 3000</h4>
         <div class="old-price">22500 Р.</div>
         <div class="new-price">15500 Р.</div>
       </article>
       <article class="good">
-        <img src="https://via.placeholder.com/150x100" alt="BOSCH BFG 6000">
+        <img src="img/goods/perf6000.jpg" width="144" height="128" alt="BOSCH BFG 6000">
         <h4 class="perf">ПЕРФОРАТОР BOSCH BFG 6000</h4>
         <div class="old-price">30500 Р.</div>
         <div class="new-price">25500 Р.</div>
       </article>
       <article class="good">
-        <img src="https://via.placeholder.com/150x100" alt="BOSCH BFG 2000">
+        <img src="img/goods/perf2-3000.jpg" width="144" height="128" alt="BOSCH BFG 2000">
         <h4 class="perf">ПЕРФОРАТОР BOSCH BFG 2000</h4>
         <div class="old-price"></div>
         <div class="new-price">12500 Р.</div>
@@ -170,7 +167,7 @@
       </section>
     </main>
     <footer>
-      <img src="https://via.placeholder.com/150x100" alt="Логотип магазина Техномарт">
+      <img src="img/svg/logo-technomart.svg" width="220" height="68" alt="Логотип магазина Техномарт">
       <section>
         <ul>
           <li><a href="#company">Компания</a></li>
@@ -196,13 +193,13 @@
       <div class="sw">
         <ul>
           <li>
-            <a href="#">Вконтакте</a>
+            <a href="#"><img src="img/svg/icon-vk.svg" width="25" height="14" alt="значок vk"></a>
           </li>
           <li>
-            <a href="#">Фейсбук</a>
+            <a href="#"><img src="img/svg/icon-fb.svg" width="12" height="22" alt="значок vk"></a>
           </li>
           <li>
-            <a href="#">Инстаграм</a>
+            <a href="#"><img src="img/svg/icon-insta.svg" width="21" height="21" alt="значок vk"></a>
           </li>
         </ul>
       </div>
