--- a/index.html
+++ b/index.html
@@ -7,19 +7,24 @@
   <body>
     <header>
       <nav>
-        <img src="https://via.placeholder.com/150x100" alt="Логотип магазина Техномарт">
-        <input type="search" name="search" value="Поиск">
-        <ul>
-          <li><a href="blank.html">Закладки</a></li>
-          <li><a href="blank.html">Корзина</a></li>
-        </ul>
-        <input type="submit" value="Оформить заказ">
-
+        <section class="top-nav">
+          <img src="img/svg/logo-technomart.svg" width="220" height="47" alt="Логотип магазина Техномарт">
+          <img src="img/svg/icon-search.svg" width="17" height="17" alt="значок поиска">
+          <input type="search" name="search" value="Поиск">
+          <ul>
+            <li><a href="blank.html"><img src="img/svg/icon-bookmark.svg" width="14" height="16" alt="значок закладки">Закладки</a></li>
+            <li><a href="blank.html"><img src="img/svg/icon-cart.svg" width="15" height="15" alt="значок корзины">Корзина</a></li>
+          </ul>
+          <input type="submit" value="Оформить заказ">
+      </section>
+      <section class="address">
         <p>Интернет-магазин строительных материалов и инструментов для ремонта</p>
+        <img src="img/svg/icon-phone.svg" width="19" height="19" alt="значок телефона">
         <tel>+7 (812) 555-05-55</tel>
         <p>г. Санкт-Петербург, ул. Б. Конюшенная, д.19/8</p>
+      </section>
         <section class="registr">
-          <button><a href="blank.html">Войти</a></button>
+          <button><a href="blank.html"><img src="img/svg/icon-login.svg" width="20" height="17" alt="значок войти">Войти</a></button>
           <button><a href="blank.html">Регистрация</a></button>
         </section>
         <ul>
@@ -176,7 +181,7 @@
       </section>
     </main>
     <footer>
-      <img src="https://via.placeholder.com/150x100" alt="Логотип магазина Техномарт">
+      <img src="img/svg/logo-technomart.svg" width="220" height="68" alt="Логотип магазина Техномарт">
       <section>
         <ul>
           <li><a href="#company">Компания</a></li>
@@ -202,13 +207,13 @@
       <div class="sw">
         <ul>
           <li>
-            <a href="#">Вконтакте</a>
+            <a href="#"><img src="img/svg/icon-vk.svg" width="25" height="14" alt="значок vk"></a>
           </li>
           <li>
-            <a href="#">Фейсбук</a>
+            <a href="#"><img src="img/svg/icon-fb.svg" width="12" height="22" alt="значок vk"></a>
           </li>
           <li>
-            <a href="#">Инстаграм</a>
+            <a href="#"><img src="img/svg/icon-insta.svg" width="21" height="21" alt="значок vk"></a>
           </li>
         </ul>
       </div>
