--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Техномарт</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <header>
@@ -45,37 +46,53 @@
         <ul>
           <li>
             <h3>Материалы</h3>
-            <button><a href="blank.html">НА ЛЮБОЙ ВКУС</a></button>
+            <img src="img/svg/icon-1.svg" width="45" height="65" alt="paint">
+            <button><a href="blank.html">на любой вкус</a></button>
           </li>
           <li>
             <h3>Инструменты</h3>
-            <button><a href="blank.html">НА ВСЕ СЛУЧАИ</a></button>
+            <img src="img/svg/icon-2.svg" width="75" height="61" alt="drill">
+            <button><a href="blank.html">на все случаи</a></button>
           </li>
           <li>
             <h3>Техника</h3>
-            <button><a href="blank.html">ДЛЯ СТРОЙКИ</a></button>
+            <img src="img/svg/icon-3.svg" width="78" height="62" alt="tractor">
+            <button><a href="blank.html">для стройки</a></button>
           </li>
           <li>
-            <article  class="slider">
-              <h2>ПЕРФОРАТОРЫ</h2>
-              <p>Настоящие мужские игрушки</p>
-              <figure>
-                <a href="#">
-                  <img src="img/studio.jpg" width="286" height="164" alt="Интерьер">
-                </a>
-              </figure>
-              <button type="button">Назад</button>
-              <button type="button">Вперед</button>
-              <button> <a href="catalog.html">ОТКРЫТЬ КАТАЛОГ</a></button>
+            <article  class="slider" width="620" height="266">
+              <div class="perforators">
+                <h2>Перфораторы</h2>
+                <p>Настоящие мужские игрушки</p>
+
+                  <!-- сделать фоном для .slider <img src="img/goods/slider-perf.jpg" width="620" height="266" alt="мужчина с перфоратором"> -->
+
+                  <button type="button" disabled><img src="img/svg/icon-left.svg" width="22" height="40" alt="листать влево"></button>
+                  <button type="button"><img src="img/svg/icon-right.svg" width="22" height="40" alt="листать вправо"></button>
+                <button> <a href="catalog.html">открыть каталог</a></button>
+              </div>
+              <div class="drills">
+                <h2>Дрели</h2>
+                <p>Соседям на радость</p>
+
+                  <!-- сделать фоном для .slider <img src="img/goods/slider-drill.jpg" width="620" height="266" alt="мужчина с перфоратором"> -->
+
+                <button type="button" disabled><img src="img/svg/icon-left.svg" width="22" height="40" alt="листать влево"></button>
+                <button type="button"><img src="img/svg/icon-right.svg" width="22" height="40" alt="листать вправо"></button>
+                <button> <a href="catalog.html">открыть каталог</a></button>
+              </div>
             </article>
           </li>
+
           <li>
             <h3>Скидки 50%</h3>
-            <button><a href="blank.html">НА 350 ТОВАРОВ</a></button>
+            <img src="img/svg/icon-4.svg" width="59" height="72" alt="sales">
+            <button><a href="blank.html">на 350 товаров</a></button>
           </li>
           <li>
             <h3>Доставка</h3>
-            <button><a href="#delivery">БЕСПЛАТНО</a></button>
+            <img src="img/svg/icon-4.svg" width="78" height="63" alt="delivery">
+            <button><a href="#delivery">бесплатно</a></button>
           </li>
 
 
@@ -85,28 +102,30 @@
         <h2>Популярные товары:</h2>
         <button><a href="blank.html">Все популярные товары</a></button>
         <article class="good">
-          <img src="https://via.placeholder.com/150x100" alt="BOSCH BFG 9000">
+          <img src="img/goods/perf3-9000.jpg" width="184" height="164" alt="BOSCH BFG 9000">
           <h4 class="perf">ПЕРФОРАТОР BOSCH BFG 9000</h4>
           <div class="old-price">32500 Р.</div>
-          <div class="new-price">25500 Р.</div>
+          <button class="new-price">25500 Р.</div>
         </article>
         <article class="good">
-          <img src="https://via.placeholder.com/150x100" alt="BOSCH BFG 3000">
+          <img src="img/goods/perf2-3000.jpg" width="184" height="164" alt="BOSCH BFG 3000">
           <h4 class="perf">ПЕРФОРАТОР BOSCH BFG 3000</h4>
+          <div class="new">New</div>
           <div class="old-price">22500 Р.</div>
-          <div class="new-price">15500 Р.</div>
+          <button class="new-price">15500 Р.</div>
         </article>
         <article class="good">
-          <img src="https://via.placeholder.com/150x100" alt="BOSCH BFG 6000">
+          <img src="img/goods/perf6000.jpg" width="184" height="164" alt="BOSCH BFG 6000">
           <h4 class="perf">ПЕРФОРАТОР BOSCH BFG 6000</h4>
           <div class="old-price">30500 Р.</div>
-          <div class="new-price">25500 Р.</div>
+          <button class="new-price">25500 Р.</button>
         </article>
         <article class="good">
-          <img src="https://via.placeholder.com/150x100" alt="BOSCH BFG 2000">
+          <img src="img/goods/perf2-3000.jpg" width="184" height="164" alt="BOSCH BFG 2000">
           <h4 class="perf">ПЕРФОРАТОР BOSCH BFG 2000</h4>
+          <div class="new">New</div>
           <div class="old-price"></div>
-          <div class="new-price">12500 Р.</div>
+          <button class="new-price">12500 Р.</div>
         </article>
       </section>
       <section class="popmakers">
@@ -114,50 +133,76 @@
         <button><a href="blank.html">Все производители</a></button>
         <ul>
           <li>
-            <article><img src="https://via.placeholder.com/150x100" alt="Bosch"></article>
+            <article><a href="#"><img src="img/partners/bosch.jpg" width="220" height="145" alt="Bosch"></a></article>
           </li>
           <li>
-            <article><img src="https://via.placeholder.com/150x100" alt="Makita"></article>
+            <article><a href="#"><img src="img/partners/makita.jpg" width="220" height="145" alt="Makita"></a></article>
           </li>
           <li>
-            <article><img src="https://via.placeholder.com/150x100" alt="DeWalt"></article>
+            <article><a href="#"><img src="img/partners/dewalt.jpg" width="220" height="145" alt="DeWalt"></a></article>
           </li>
           <li>
-            <article><img src="https://via.placeholder.com/150x100" alt="Интерскол"></article>
+            <article><a href="#"><img src="img/partners/interskol.jpg" width="220" height="145" alt="Интерскол"></a></article>
           </li>
           <li>
-            <article><img src="https://via.placeholder.com/150x100" alt="Hitachi"></article>
+            <article><a href="#"><img src="img/partners/hitachi.jpg" width="220" height="145" alt="Hitachi"></a></article>
           </li>
           <li>
-            <article><img src="https://via.placeholder.com/150x100" alt="LG"></article>
+            <article><a href="#"><img src="img/partners/lg.jpg" width="220" height="145" alt="LG"></a></article>
           </li>
           <li>
-            <article><img src="https://via.placeholder.com/150x100" alt="AEG"></article>
+            <article><a href="#"><img src="img/partners/aeg.jpg" width="220" height="145" alt="AEG"></a></article>
           </li>
           <li>
-            <article><img src="https://via.placeholder.com/150x100" alt="Metabo"></article>
+            <article><a href="#"><img src="img/partners/metabo.jpg" width="220" height="145" alt="Metabo"></a></article>
           </li>
         </ul>
       </section>
-      <section>
+      <section class="delivery-block">
         <h2>Сервис</h2>
         <p>Хороший интернет-магазин отличается от плохого не только ценами!</p>
         <p>Мы стараемся изо всех сил, чтоб сделать ваши покупки приятными.</p>
-        <select name="service" size="3">
-          <option value="delivery">Доставка</option>
-          <option value="garant">Гарантия</option>
-          <option value="credit">Кредит</option>
-        </select>
-        <div class="selected">
-          <h2>Доставка</h2>
-          <p>Мы с удовольствием доставим ваш товар прямо<br>
-            к вашему подъезду совершенно бесплатно!<br>
-            Ведь мы неплохо заработаем,<br>
-            поднимая его на ваш этаж!</p>
-        </div>
-        <div class="selected-img">
-          <img src="https://via.placeholder.com/150x100" alt="Delivery-img">
-        </div>
+      </section>
+      <section class="servise">
+        <section class="select-block">
+          <button value="Доставка">Доставка</button>
+          <button value="Гарантия">Гарантия</button>
+          <button value="Кредит">Кредит</button>
+        <img src="img/svg/service-rightline.svg" width="10" height="279" alt="">
+      </section>
+          <div class="selected">
+            <h2>Доставка</h2>
+            <p>Мы с удовольствием доставим ваш товар прямо<br>
+              к вашему подъезду совершенно бесплатно!<br>
+              Ведь мы неплохо заработаем,<br>
+              поднимая его на ваш этаж!</p>
+          </div>
+          <div class="selected-img">
+            <img src="img/svg/service-delivery-car.svg" alt="Delivery-img">
+          </div>
+      </section>
+      <section class="servise">
+          <div class="selected">
+            <h2>Гарантия</h2>
+            <p>Если купленный у нас товар поломается или заискрит,<br>
+               а также в случае пожара, спровоцированного его<br>
+               возгоранием,  вы всегда можете быть уверены в нашей<br>
+                гарантии. Мы обменяем сгоревший товар на новый.<br>
+                  Дом уж восстановите как-нибудь сами.</p>
+          </div>
+          <div class="selected-img">
+            <img src="img/svg/service-garanty.svg" alt="garanty-img">
+          </div>
+      </section>
+      <section class="servise">
+          <div class="selected">
+            <h2>Кредит</h2>
+            <p>Залезть в долговую яму стало проще!<br>
+                Кредитные консультанты придут вам на помощь.</p>
+          </div>
+          <div class="selected-img">
+            <img src="img/svg/service-credit.svg" alt="garanty-img">
+          </div>
       </section>
       <section class="company">
         <h2>Компания "Техномарт"</h2>
@@ -181,7 +226,7 @@
       </section>
     </main>
     <footer>
-      <img src="img/svg/logo-technomart.svg" width="220" height="68" alt="Логотип магазина Техномарт">
+      <img src="img/svg/logo-technomart.svg" width="220" height="68" alt="Логотип Техномарт">
       <section>
         <ul>
           <li><a href="#company">Компания</a></li>
