--- a/catalog.html
+++ b/catalog.html
@@ -46,7 +46,7 @@
       </nav>
     </header>
     <main>
-      <h1>Каталог товаров</h1>
+      <h1 class="visually-hidden">Каталог товаров</h1>
       <section class="directory">
         <ul>
           <li><a href="index.html"><img src="img/svg/icon-home.svg"></a></li>
@@ -124,10 +124,16 @@
 	width: 100%;
 	height: 100%;
 	box-sizing: border-box;
+}
+.block:hover .getbuy {
+	display: block;
+	background: rgb(0, 0, 0);
+  cursor: pointer;
 }-->
         <h4 class="perf">ПЕРФОРАТОР BOSCH BFG 3000</h4>
+        <div class="new">New</div>
         <div class="old-price">22500 Р.</div>
-        <div class="new-price">15500 Р.</div>
+        <button class="new-price">15500 Р.</button>
       </article>
       <article class="good">
         <div class="img-good">
@@ -138,8 +144,9 @@
           <img src="img/goods/perf6000.jpg" width="144" height="128" alt="BOSCH BFG 6000">
         </div>
         <h4 class="perf">ПЕРФОРАТОР BOSCH BFG 6000</h4>
+        <div class="new">New</div>
         <div class="old-price">30500 Р.</div>
-        <div class="new-price">25500 Р.</div>
+        <button class="new-price">25500 Р.</button>
       </article>
       <article class="good">
         <div class="img-good">
@@ -152,7 +159,7 @@
         <h4 class="perf">ПЕРФОРАТОР BOSCH BFG 2000</h4>
         <div class="new">New</div>
         <div class="old-price"></div>
-        <div class="new-price">12500 Р.</div>
+        <button class="new-price">12500 Р.</button>
       </article>
       <article class="good">
         <div class="img-good">
@@ -165,7 +172,7 @@
         <h4 class="perf">ПЕРФОРАТОР BOSCH BFG 3000</h4>
         <div class="new">New</div>
         <div class="old-price">22500 Р.</div>
-        <div class="new-price">15500 Р.</div>
+        <button class="new-price">15500 Р.</button>
       </article>
       <article class="good">
         <div class="img-good">
@@ -176,8 +183,9 @@
           <img src="img/goods/perf6000.jpg" width="144" height="128" alt="BOSCH BFG 6000">
         </div>
         <h4 class="perf">ПЕРФОРАТОР BOSCH BFG 6000</h4>
+        <div class="new">New</div>
         <div class="old-price">30500 Р.</div>
-        <div class="new-price">25500 Р.</div>
+        <button class="new-price">25500 Р.</button>
       </article>
       <article class="good">
         <div class="img-good">
@@ -190,7 +198,7 @@
         <h4 class="perf">ПЕРФОРАТОР BOSCH BFG 2000</h4>
         <div class="new">New</div>
         <div class="old-price"></div>
-        <div class="new-price">12500 Р.</div>
+        <button class="new-price">12500 Р.</button>
       </article><article class="good">
         <div class="img-good">
           <div class="getbuy">
@@ -202,7 +210,7 @@
         <h4 class="perf">ПЕРФОРАТОР BOSCH BFG 3000</h4>
         <div class="new">New</div>
         <div class="old-price">22500 Р.</div>
-        <div class="new-price">15500 Р.</div>
+        <button class="new-price">15500 Р.</button>
       </article>
       <article class="good">
         <div class="img-good">
@@ -213,8 +221,9 @@
           <img src="img/goods/perf6000.jpg" width="144" height="128" alt="BOSCH BFG 6000">
         </div>
         <h4 class="perf">ПЕРФОРАТОР BOSCH BFG 6000</h4>
+        <div class="new">New</div>
         <div class="old-price">30500 Р.</div>
-        <div class="new-price">25500 Р.</div>
+        <button class="new-price">25500 Р.</button>
       </article>
       <article class="good">
         <div class="img-good">
@@ -227,7 +236,7 @@
         <h4 class="perf">ПЕРФОРАТОР BOSCH BFG 2000</h4>
         <div class="new">New</div>
         <div class="old-price"></div>
-        <div class="new-price">12500 Р.</div>
+        <button class="new-price">12500 Р.</button>
       </article>
       <section class="pages">
         <ul>
