--- a/index.html
+++ b/index.html
@@ -3,43 +3,63 @@
   <head>
     <meta charset="utf-8">
     <title>Техномарт</title>
-    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Cuprum:ital,wght@0,400;0,700;1,400&family=PT+Sans&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <header>
-      <nav>
-        <section class="top-nav">
-          <img src="img/svg/logo-technomart.svg" width="220" height="47" alt="Логотип магазина Техномарт">
-          <img src="img/svg/icon-search.svg" width="17" height="17" alt="значок поиска">
-          <input type="search" name="search" value="Поиск">
-          <ul>
-            <li><a href="blank.html"><img src="img/svg/icon-bookmark.svg" width="14" height="16" alt="значок закладки">Закладки</a></li>
-            <li><a href="blank.html"><img src="img/svg/icon-cart.svg" width="15" height="15" alt="значок корзины">Корзина</a></li>
-          </ul>
-          <input type="submit" value="Оформить заказ">
-      </section>
-      <section class="address">
-        <p>Интернет-магазин строительных материалов и инструментов для ремонта</p>
-        <img src="img/svg/icon-phone.svg" width="19" height="19" alt="значок телефона">
-        <tel>+7 (812) 555-05-55</tel>
-        <p>г. Санкт-Петербург, ул. Б. Конюшенная, д.19/8</p>
-      </section>
-        <section class="registr">
-          <button><a href="blank.html"><img src="img/svg/icon-login.svg" width="20" height="17" alt="значок войти">Войти</a></button>
-          <button><a href="blank.html">Регистрация</a></button>
-        </section>
-        <ul>
-          <li><a href="index.html">Главная</a></li>
-          <li><a href="blank.html">Компания</a></li>
-          <li><a href="catalog.html">Каталог</a></li>
-          <li><a href="blank.html">Новости</a></li>
-          <li><a href="blank.html">Спецпредложения</a></li>
-          <li><a href="blank.html">Контакты</a></li>
-          <li><a href="blank.html">Доставка</a></li>
-        </ul>
+      <nav class="navigation">
+        <div class="top-nav">
+          <div class="top-nav-conteiner">
+            <a class="header-logo">
+              <img src="img/svg/logo-technomart.svg" width="220" height="47" alt="Логотип магазина Техномарт">
+            </a>
+            <ul class="top-nav-buttons">
+              <li class="search-field"><img src="img/svg/icon-search.svg" width="17" height="17" alt="значок поиска">
+                <input type="search" name="search" value="Поиск"></li>
+              <li class="favor-button"><a href="blank.html"><img src="img/svg/icon-bookmark.svg" width="14" height="16" alt="значок закладки">Закладки: 0</a></li>
+              <li class="basket-button"><a href="blank.html"><img src="img/svg/icon-cart.svg" width="15" height="15" alt="значок корзины">Корзина: 0</a></li>
+            </ul>
+            <div class="get-order"><input type="submit" value="Оформить заказ"></div>
+          </div>
+        </div>
+        <div class="bottom-nav">
+          <div class="header-info">
+            <div class="descript">
+              <p>Интернет-магазин<br>
+                строительных материалов<br>
+                и инструментов для ремонта</p>
+            </div>
+            <div class="contacts">
+              <div class="phone">
+                <img src="img/svg/icon-phone.svg" width="19" height="19" alt="значок телефона">
+                <tel>+7 (812) 555-05-55</tel>
+              </div>
+              <p>г. Санкт-Петербург, ул. Б. Конюшенная, д.19/8</p>
+            </div>
+            <div class="user-nav">
+              <button><a href="blank.html"><img src="img/svg/icon-login.svg" width="20" height="17" alt="значок войти">Войти</a></button>
+              <button><a href="blank.html">Регистрация</a></button>
+            </div>
+          </div>
+          <div class="main-nav-wrapper">
+            <div class="conteiner">
+              <ul class="site-nav">
+                <li><a href="index.html">Главная</a></li>
+                <li><a href="blank.html">Компания</a></li>
+                <li><a href="catalog.html">Каталог</a></li>
+                <li><a href="blank.html">Новости</a></li>
+                <li><a href="blank.html">Спецпредложения</a></li>
+                <li><a href="blank.html">Контакты</a></li>
+                <li><a href="blank.html">Доставка</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
       </nav>
     </header>
-    <main>
+    <main class="conteiner">
       <h1 class="visually-hidden">Магазин Техномарт</h1>
       <section class="categories">
         <h2 class="visually-hidden">Категории товаров</h2>
