--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             </a>
             <ul class="top-nav-buttons">
               <li class="search-field"><img src="img/svg/icon-search.svg" width="17" height="17" alt="значок поиска">
-                <input type="search" name="search" value="Поиск"></li>
+                Поиск:<input type="search" name="search"></li>
               <li class="favor-button"><a href="blank.html"><img src="img/svg/icon-bookmark.svg" width="14" height="16" alt="значок закладки">Закладки: 0</a></li>
               <li class="basket-button"><a href="blank.html"><img src="img/svg/icon-cart.svg" width="15" height="15" alt="значок корзины">Корзина: 0</a></li>
             </ul>
