--- a/index.html
+++ b/index.html
@@ -8,20 +8,24 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    <header>
+    <header class="main-header">
       <nav class="navigation">
         <div class="top-nav">
-          <div class="top-nav-conteiner">
-            <a class="header-logo">
+          <div class="top-navi conteiner">
+            <a class="header-logo" href="index.html">
               <img src="img/svg/logo-technomart.svg" width="220" height="47" alt="Логотип магазина Техномарт">
             </a>
-            <ul class="top-nav-buttons">
-              <li class="search-field"><img src="img/svg/icon-search.svg" width="17" height="17" alt="значок поиска">
-                Поиск:<input type="search" name="search"></li>
-              <li class="favor-button"><a href="blank.html"><img src="img/svg/icon-bookmark.svg" width="14" height="16" alt="значок закладки">Закладки: 0</a></li>
-              <li class="basket-button"><a href="blank.html"><img src="img/svg/icon-cart.svg" width="15" height="15" alt="значок корзины">Корзина: 0</a></li>
-            </ul>
-            <div class="get-order"><input type="submit" value="Оформить заказ"></div>
+            <form class="search-field" action="http://htmlacademy.ru">
+              <img src="img/svg/icon-search.svg" width="17" height="17" alt="значок поиска">
+              <input type="text" name="search" placeholder="Поиск:" width="271" height="42">
+            </form>
+            <a class="bookmark" href="blank.html">
+              <!--::before img-->
+              Закладки: 0</a>
+            <a class="cart" href="blank.html">
+              <!--::before img-->
+              Корзина: 0</a>
+            <a class="make-order" href="blank.html">Оформить заказ</a>
           </div>
         </div>
         <div class="bottom-nav">
@@ -39,47 +43,55 @@
               <p>г. Санкт-Петербург, ул. Б. Конюшенная, д.19/8</p>
             </div>
             <div class="user-nav">
-              <button><a href="blank.html"><img src="img/svg/icon-login.svg" width="20" height="17" alt="значок войти">Войти</a></button>
-              <button><a href="blank.html">Регистрация</a></button>
+              <ul class="button-user-nav">
+                <li class="sign-in">
+                  <a href="blank.html">
+                    <!--::before img-->
+                    Войти
+                  </a></li>
+                <li><a href="blank.html">Регистрация</a></li>
+              </ul>
             </div>
           </div>
           <div class="main-nav-wrapper">
-            <div class="conteiner">
-              <ul class="site-nav">
-                <li><a href="index.html">Главная</a></li>
-                <li><a href="blank.html">Компания</a></li>
-                <li><a href="catalog.html">Каталог</a></li>
-                <li><a href="blank.html">Новости</a></li>
-                <li><a href="blank.html">Спецпредложения</a></li>
-                <li><a href="blank.html">Контакты</a></li>
-                <li><a href="blank.html">Доставка</a></li>
-              </ul>
-            </div>
+            <ul class="site-nav">
+              <li><a href="index.html">Главная</a></li>
+              <li><a href="blank.html">Компания</a></li>
+              <li><a href="catalog.html">Каталог</a></li>
+              <li><a href="blank.html">Новости</a></li>
+              <li><a href="blank.html">Спецпредложения</a></li>
+              <li><a href="blank.html">Контакты</a></li>
+              <li><a href="blank.html">Доставка</a></li>
+            </ul>
           </div>
         </div>
       </nav>
     </header>
+
     <main class="conteiner">
       <h1 class="visually-hidden">Магазин Техномарт</h1>
       <section class="categories">
         <h2 class="visually-hidden">Категории товаров</h2>
-        <ul>
-          <li>
+        <ul class="categories">
+          <li class="category materials">
             <h3>Материалы</h3>
-            <img src="img/svg/icon-1.svg" width="45" height="65" alt="paint">
-            <button><a href="blank.html">на любой вкус</a></button>
+            <!--::before img-->
+            <div class="corner-lable">New</div>
+            <a class="category-button" href="#">на любой вкус</a>
           </li>
-          <li>
+          <li class="category tools">
             <h3>Инструменты</h3>
-            <img src="img/svg/icon-2.svg" width="75" height="61" alt="drill">
-            <button><a href="blank.html">на все случаи</a></button>
+            <!--::before<img src="img/svg/icon-2.svg" width="75" height="61" alt="drill">-->
+            <div class="corner-lable">New</div>
+            <a class="category-button" href="#">на все случаи</a>
           </li>
-          <li>
+          <li class="category technic">
             <h3>Техника</h3>
-            <img src="img/svg/icon-3.svg" width="78" height="62" alt="tractor">
-            <button><a href="blank.html">для стройки</a></button>
+            <!--::before<img src="img/svg/icon-3.svg" width="78" height="62" alt="tractor">-->
+            <div class="corner-lable">New</div>
+            <a class="category-button" href="#">для стройки</a>
           </li>
-          <li>
+          <li class="slide">
             <article  class="slider" width="620" height="266">
               <div class="perforators">
                 <h2>Перфораторы</h2>
@@ -103,49 +115,90 @@
               </div>
             </article>
           </li>
-
-          <li>
+          <li class="category sale">
             <h3>Скидки 50%</h3>
-            <img src="img/svg/icon-4.svg" width="59" height="72" alt="sales">
-            <button><a href="blank.html">на 350 товаров</a></button>
+            <!--::before<img src="img/svg/icon-4.svg" width="59" height="72" alt="sales">-->
+            <div class="corner-lable">New</div>
+            <a class="category-button" href="#">на 350 товаров</a>
           </li>
-          <li>
+          <li class="category delivery-card">
             <h3>Доставка</h3>
-            <img src="img/svg/icon-4.svg" width="78" height="63" alt="delivery">
-            <button><a href="#delivery">бесплатно</a></button>
+            <!--::before<img src="img/svg/icon-4.svg" width="78" height="63" alt="delivery">-->
+            <div class="corner-lable">New</div>
+            <a class="category-button" href="#delivery">бесплатно</a>
           </li>
-
-
         </ul>
       </section>
       <section class="popgoods">
-        <h2>Популярные товары:</h2>
-        <button><a href="blank.html">Все популярные товары</a></button>
-        <article class="good">
+        <div class="pop-goods-title">
+          <h2>Популярные товары:</h2>
+          <a href="#">Все популярные товары</a>
+        </div>
+        <article class="good bfg9000">
+          <div class="hidden-buttons">
+            <a class="buy" href="#">
+              <!--::before img-->
+              Купить
+            </a>
+            <a class="to-bookmarks" href="#">
+              В закладки
+            </a>
+          </div>
+          <div class="corner-lable">New</div>
           <img src="img/goods/perf3-9000.jpg" width="184" height="164" alt="BOSCH BFG 9000">
           <h4 class="perf">ПЕРФОРАТОР BOSCH BFG 9000</h4>
           <div class="old-price">32500 Р.</div>
-          <button class="new-price">25500 Р.</button>
+          <a class="new-price">25500 Р.</a>
         </article>
-        <article class="good">
+        <article class="good bdg3000" >
+          <div class="hidden-buttons">
+            <a class="buy" href="#">
+              <!--::before img-->
+              Купить
+            </a>
+            <a class="to-bookmarks" href="#">
+              В закладки
+            </a>
+          </div>
+          <div class="corner-lable">New</div>
           <img src="img/goods/perf2-3000.jpg" width="184" height="164" alt="BOSCH BFG 3000">
           <h4 class="perf">ПЕРФОРАТОР BOSCH BFG 3000</h4>
           <div class="new">New</div>
           <div class="old-price">22500 Р.</div>
-          <button class="new-price">15500 Р.</button>
+          <a class="new-price">15500 Р.</a>
         </article>
-        <article class="good">
+        <article class="good bfg6000">
+          <div class="hidden-buttons">
+            <a class="buy" href="#">
+              <!--::before img-->
+              Купить
+            </a>
+            <a class="to-bookmarks" href="#">
+              В закладки
+            </a>
+          </div>
+          <div class="corner-lable">New</div>
           <img src="img/goods/perf6000.jpg" width="184" height="164" alt="BOSCH BFG 6000">
           <h4 class="perf">ПЕРФОРАТОР BOSCH BFG 6000</h4>
           <div class="old-price">30500 Р.</div>
-          <button class="new-price">25500 Р.</button>
+          <a class="new-price">25500 Р.</a>
         </article>
-        <article class="good">
+        <article class="good bfg2000">
+          <div class="hidden-buttons">
+            <a class="buy" href="#">
+              <!--::before img-->
+              Купить
+            </a>
+            <a class="to-bookmarks" href="#">
+              В закладки
+            </a>
+          </div>
+          <div class="corner-lable">New</div>
           <img src="img/goods/perf2-3000.jpg" width="184" height="164" alt="BOSCH BFG 2000">
           <h4 class="perf">ПЕРФОРАТОР BOSCH BFG 2000</h4>
           <div class="new">New</div>
           <div class="old-price"></div>
-          <button class="new-price">12500 Р.</button>
+          <a class="new-price">12500 Р.</a>
         </article>
       </section>
       <section class="popmakers">
@@ -249,6 +302,7 @@
         </iframe>
       </section>
     </main>
+
     <footer>
       <img src="img/svg/logo-technomart.svg" width="220" height="68" alt="Логотип Техномарт">
       <section>
@@ -296,6 +350,7 @@
       </div>
     </section>
     </footer>
+
     <section class="write-us">
       <form action="https://echo.htmlacademy.ru/" method="post">
         <button class="close"><img src="img/svg/icon-close.svg" width="21" height="21" alt="close"></button>
